# hyperliquid-mcp

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
hyperliquid_mcp_server/: __init__.py  http_server.py  main.py  mcp_http_server.py
hyperliquid_mcp_server/tools/: __init__.py  account_info.py  market_data.py  trading.py
hyperliquid_mcp_server/types/: __init__.py  hyperliquid.py
hyperliquid_mcp_server/utils/: __init__.py  config.py  hyperliquid_client.py
src/: index.ts
src/tools/: account-info.ts  market-data.ts  trading.ts
src/types/: hyperliquid.ts
src/utils/: config.ts  hyperliquid-client.ts
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_main.py  test_tools.py
